<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/edit_name" />

        <EditText
            android:id="@+id/edit_name_celebration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/edit_name_celebration" />

        <EditText
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/date_celepration"
            android:focusable="false"
            android:inputType="date"/>

        <EditText

            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/time_allarm"
            android:focusable="false"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:checked="false"
            android:text="@string/send_sms"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_num_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/number_tell"
            android:inputType="number"/>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:checked="false"
            android:text="@string/switch_congratulation"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_congratulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/edit_congratulation"/>

        <EditText
            android:id="@+id/enter_congratulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/enter_text_congratulation"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:orientation="horizontal"
            android:layout_weight="0">


            <Button
                android:id="@+id/text_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/back"
                android:textSize="18sp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="18sp"
               style="@style/Widget.AppCompat.Button.Borderless.Colored"/>



    </LinearLayout>


</LinearLayout>